<resources>
    <string name="app_name">BackKitchen</string>
    <string name="response_msg_success">OK</string>
    <string name="response_msg_failure">Fehler</string>
    <string name="response_add_success">Erfolgreich gespeichert</string>
    <string name="response_add_failure">Speichern fehlgeschlagen</string>
    <string name="new_order">Neue Bestellung</string>
    <string name="history_order">Historische Ordnung</string>
    <string name="service_not_started">（Dienst nicht gestartet）</string>
    <string name="service_started">（Der Service hat begonnen）</string>
    <string name="background_services">Hintergrundservice</string>
    <string name="background_services_details">Die Stabilität des Dienstes kann nach dem Schließen dieser Benachrichtigung nicht garantiert werden</string>
    <string name="ip_tip"> &#160;&#160;I&#160;P:&#160;&#160;</string>
    <string name="port_tip">Port:</string>
    <string name="service_not_started_button">Service starten</string>
    <string name="service_started_button">Dienst läuft</string>
    <string name="service_notification">Der Dienst wird ausgeführt (diese Benachrichtigung nicht schließen, um den Hintergrunddienst am Leben zu erhalten)</string>
    <string name="service_live">Service bleibt am Leben</string>
    <string name="port_error">Die Portnummer hat ein falsches Format.</string>
    <string name="service_startup_failure">Dienststart fehlgeschlagen</string>
    <string name="service_startup_success">Der Dienst wurde erfolgreich gestartet</string>
    <string name="shop_shelf">Regal</string>
    <string name="shop_obtained">Erhalten</string>
    <string name="price_unit">€ %s</string>
    <string name="commiting">Einreichen</string>
    <string name="commit">Senden</string>
    <string name="confirm">Bestätigen</string>
    <string name="commit_success">Erfolgreich übermittelt</string>
    <string name="commit_failure">Einreichung fehlgeschlagen</string>
    <string name="shop_name">Bitte geben Sie den Produktnamen ein</string>
    <string name="shop_price">Bitte geben Sie den Preis ein</string>
    <string name="permission_denied">Zugang verweigert</string>
    <string name="upload_failure">Upload fehlgeschlagen</string>
    <string name="upload_success">Upload Erfolgreicher</string>
    <string name="cancle">Abbrechen</string>
    <string name="time">Zeit bestellen</string>
    <string name="share">%s Teilen</string>
    <string name="ip_not_null">IP Adresse darf nicht leer sein!</string>
    <string name="port_not_null">Port darf nicht leer sein!</string>
    <string name="ip_format_error">IP Portformat Fehler!</string>
    <string name="port_format_error">Port Portformat Fehler!</string>
    <string name="not_service_image">Kein inneres Bild</string>
    <string name="image_type">Unterstützt nur JPG, PNG und Webbilder</string>
    <string name="permission_storage">Lagerung</string>
    <string name="permission_camera">Kamera</string>
    <string name="permission_read_external_storage">Speicher lesen</string>
</resources>
