<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include layout="@layout/tool_bar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="817px"
            android:background="#fffff9eb"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="478px"
                android:layout_height="478px"
                android:layout_marginTop="36px"
                android:src="@drawable/shop_add_icon" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="621px"
                android:layout_height="100px"
                android:layout_marginTop="30px"
                android:background="@drawable/shop_name_shape"
                android:gravity="center"
                android:hint="@string/shop_name"
                android:paddingLeft="30px"
                android:textColor="#ff000000"
                android:textSize="36px" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="621px"
                android:layout_height="100px"
                android:layout_marginTop="30dp"
                android:background="@drawable/shop_name_shape"
                android:gravity="center"
                android:hint="@string/shop_price"
                android:inputType="number|numberDecimal"
                android:paddingLeft="30px"
                android:textColor="#ff000000"
                android:textSize="36px" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_add_shop"
            android:layout_width="980px"
            android:layout_height="147px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="114px"
            android:background="@drawable/add_shop_button_bg"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@android:color/white"
            android:textSize="44px"
            android:layout_marginBottom="200px"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>